@startuml
skinparam classAttributeIconSize 0
left to right direction

class Platform{
    +calculatePeriod(nrDays)
    +getTime()
    +calculateDifference(date, time)
    +schedulesPayment(email)
}

class DoPaymentTask{
    +doPayment()
}

abstract TimerTask{
    +run()
}

class RegistOrganization {
    +getOrganizationByUserEmailMan(email)
}

class Organization {
    +getDefinePayment()
}

class DefinePayment {
    +getTimeToPay()
    +getDateToPay()
    +getNrDays()
}

class Timer{
    +scheduleAtFixedRate(task, interval, period)
}
DoPaymentTask ..> TimerTask
Platform "1" --> "1" DoPaymentTask : has
Platform "1" --> "1" RegistOrganization : has
RegistOrganization "1" --> "1..*" Organization : has
Organization "1" --> "1" DefinePayment : has
Platform "1" --> "1" Timer : creates

@enduml